@@ -1,11 +1,11 @@
 package uma.informatica.sii.gestor_productos.microservice_gestor_productos.ProductoTests;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import java.io.IOException;
 import java.net.URI;
 import java.util.Collections;
-import java.util.Optional;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -24,37 +24,45 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.http.RequestEntity;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.web.util.DefaultUriBuilderFactory;
-import org.springframework.web.util.UriBuilder;
-import org.springframework.web.util.UriBuilderFactory;
 
+<<<<<<< HEAD
 
 
 import org.springframework.core.ParameterizedTypeReference;
 
+=======
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import uma.informatica.sii.gestor_productos.microservice_gestor_productos.Cuenta.CuentaDTO;
+>>>>>>> e843531bd66da2434683a092f88d1ee7c26a84ba
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.Cuenta.CuentaService;
+import uma.informatica.sii.gestor_productos.microservice_gestor_productos.Cuenta.PlanDTO;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.Usuario.UsuarioDTO;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.Usuario.UsuarioService;
-import uma.informatica.sii.gestor_productos.microservice_gestor_productos.Usuario.Usuario.Rol;
-import uma.informatica.sii.gestor_productos.microservice_gestor_productos.security.JwtUtil;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.dtos.CategoriaDTO;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.dtos.ProductoDTO;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.dtos.ProductoEntradaDTO;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.entity.Categoria;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.entity.Producto;
-import uma.informatica.sii.gestor_productos.microservice_gestor_productos.excepciones.EntidadNoExistente;
-import uma.informatica.sii.gestor_productos.microservice_gestor_productos.mappers.CategoriaMapper;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.repository.CategoriaRepository;
 import uma.informatica.sii.gestor_productos.microservice_gestor_productos.repository.ProductoRepository;
+import uma.informatica.sii.gestor_productos.microservice_gestor_productos.security.JwtRequestFilter;
 
 @SpringBootTest(
     webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT,
-    properties = {"spring.main.allow-bean-definition-overriding=true"}
+    properties = {
+        "spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration",
+        "spring.main.allow-bean-definition-overriding=true",
+    }
 )
+@DisplayName("Tests integrados de ProductoController + ProductoService")
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
-public class ProductoApplicationTests {
+class ProductoApplicationTests {
 
     @Value(value = "${local.server.port}")
     private int port;
@@ -63,24 +71,91 @@ public class ProductoApplicationTests {
     private TestRestTemplate restTemplate;
 
     @Autowired
-    private ProductoRepository productoRepository;
+    private ProductoRepository productoRepo;
 
     @Autowired
-    private CategoriaRepository categoriaRepository;
+    private CategoriaRepository categoriaRepo;
 
-    private static final String VALID_TOKEN = "eyJhbGciOiJIUzUxMiJ9.eyJyb2xlIjoiQURNSU5JU1RSQURPUiIsInN1YiI6IjEiLCJpYXQiOjE3NDQ5MTQ3MDQsImV4cCI6MTgwNzk4NjcwNH0.YIXpA6aXXJ6q8tKjAAnVKT_uumuTdbhkLVieaCGf4vFtOMcYoNOH-FarolDduIQ3ulN-Gxy4TWBymK3ypZ38bQ\r\n";
+    private static final String AUTH_HEADER = "Authorization";
+    private static final String BEARER = "Bearer token";
 
-    private URI uri(String path) {
-        UriBuilderFactory factory = new DefaultUriBuilderFactory();
-        UriBuilder builder = factory.builder()
-            .scheme("http").host("localhost").port(port).path(path);
-        return builder.build();
+    @TestConfiguration
+    static class StubsConfig {
+        @Bean @Primary
+        UsuarioService usuarioService() {
+            return new UsuarioService(null, null) {
+                @Override
+                public java.util.Optional<UsuarioDTO> getUsuarioConectado(String jwt) {
+                    UsuarioDTO u = new UsuarioDTO();
+                    u.setId(1L);
+                    u.setRole(uma.informatica.sii.gestor_productos.microservice_gestor_productos.Usuario.Usuario.Rol.ADMINISTRADOR);
+                    return java.util.Optional.of(u);
+                }
+                @Override
+                public boolean usuarioPerteneceACuenta(Integer idCuenta, Long idUsuario, String jwt) {
+                    return true;
+                }
+                @Override
+                public java.util.Optional<UsuarioDTO> getUsuario(Long id, String jwt) {
+                    UsuarioDTO u = new UsuarioDTO();
+                    u.setId(id);
+                    u.setRole(uma.informatica.sii.gestor_productos.microservice_gestor_productos.Usuario.Usuario.Rol.ADMINISTRADOR);
+                    return java.util.Optional.of(u);
+                }
+            };
+        }
+
+        @Bean @Primary
+        CuentaService cuentaService() {
+            return new CuentaService(null, null) {
+                @Override
+                public java.util.Optional<CuentaDTO> getCuentaPorId(Integer cuentaId) {
+                    CuentaDTO c = new CuentaDTO();
+                    c.setId(cuentaId);
+                    PlanDTO plan = new PlanDTO();
+                    plan.setMaxProductos(1000);
+                    c.setPlan(plan);
+                    return java.util.Optional.of(c);
+                }
+                @Override
+                public boolean puedeCrearProducto(Integer cuentaId, int actuales, UsuarioDTO u) {
+                    return true;
+                }
+                @Override
+                public boolean puedeCrearCategoria(Integer cuentaId, int actuales, UsuarioDTO u) {
+                    return true;
+                }
+            };
+        }
+
+        @Bean @Primary
+        public JwtRequestFilter jwtRequestFilter() {
+            return new JwtRequestFilter() {
+                @Override
+                protected void doFilterInternal(
+                        HttpServletRequest request,
+                        HttpServletResponse response,
+                        FilterChain chain
+                ) throws ServletException, IOException {
+                    // No parseamos nada, simplemente delegamos
+                    chain.doFilter(request, response);
+                }
+            };
+        }
+
+          @Bean @Primary
+        SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+            http
+            .csrf(csrf -> csrf.disable())
+            .authorizeHttpRequests(auth -> auth.anyRequest().permitAll());
+            return http.build();
+        }
     }
 
     @BeforeEach
-    public void setupDatabase() {
-        productoRepository.deleteAll();
-        categoriaRepository.deleteAll();
+    void setup() {
+        productoRepo.deleteAll();
+        categoriaRepo.deleteAll();
     }
     private URI uri(String scheme, String host, int port, String... paths) {
         UriBuilderFactory ubf = new DefaultUriBuilderFactory();
@@ -124,218 +199,196 @@ public class ProductoApplicationTests {
         return peticion;
     }
 
-    @TestConfiguration
-    static class StubServicesConfig {
-        @Bean
-        @Primary
-        public UsuarioService usuarioServiceStub(RestTemplate restTemplate, JwtUtil jwtUtil) {
-            return new UsuarioService(restTemplate, jwtUtil) {
-                @Override
-                public Optional<UsuarioDTO> getUsuarioConectado(String jwtToken) {
-                    if (jwtToken != null && jwtToken.startsWith("Bearer ")) {
-                        jwtToken = jwtToken.substring(7);
-                    }
-                    if (VALID_TOKEN.equals(jwtToken)) {
-                        UsuarioDTO usuario = new UsuarioDTO();
-                        usuario.setId(1L);
-                        usuario.setRole(Rol.ADMINISTRADOR);
-                        return Optional.of(usuario);
-                    }
-                    return Optional.empty();
-                }
-                @Override
-                public boolean usuarioPerteneceACuenta(Integer idCuenta, Long usuarioId, String jwtTokenDelUsuario) {
-                    // return VALID_TOKEN.equals(jwtTokenDelUsuario) && idCuenta.equals(1) && usuarioId.equals(1L);
-                    return true;
-                }
-                @Override
-                public Optional<UsuarioDTO> getUsuario(Long usuarioId, String jwtToken) {
-                    System.out.println("Stub getUsuario invocado con ID: " + usuarioId);
-                    if (usuarioId == 1L) {
-                        UsuarioDTO usuario = new UsuarioDTO();
-                        usuario.setId(1L);
-                        usuario.setRole(Rol.ADMINISTRADOR);
-                        return Optional.of(usuario);
-                    }
-                    return Optional.empty();
-                }
-
-            };
-        }
-
-        @Bean
-        @Primary
-        public CuentaService cuentaServiceStub(RestTemplate restTemplate, JwtUtil jwtUtil) {
-            return new CuentaService(restTemplate, jwtUtil) {
-                @Override
-                public boolean puedeCrearProducto(Integer cuentaId, int productosActuales, UsuarioDTO usuario) {
-                    // Permitimos siempre si viene un usuario válido
-                    return true;
-                }
-            };
-        }
+    // Helper para construir URIs
+    private URI endpoint(String pathAndQuery) {
+        return URI.create("http://localhost:" + port + pathAndQuery);
     }
 
-    @Nested
-    @DisplayName("Controlador /producto sin productos previos")
-    class ControladorVacio {
-        @Test
-        @DisplayName("GET /producto?idCuenta=1 devuelve lista vacía")
-        public void listaVacia() {
-            URI endpoint = uri("/producto?idCuenta=1");
-            RequestEntity<Void> request = RequestEntity.get(endpoint)
-                .header("Authorization", "Bearer " + VALID_TOKEN)
-                .accept(MediaType.APPLICATION_JSON)
-                .build();
-        
-            ResponseEntity<Set<ProductoDTO>> response = restTemplate.exchange(request,
+    @Nested @DisplayName("Cuando NO hay productos")
+    class SinProductos {
+
+        @Test @DisplayName("GET sin params → 400")
+        void getSinParams() {
+            ResponseEntity<String> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto")).build(),
+                String.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(400);
+        }
+
+        @Test @DisplayName("GET con >1 params → 400")
+        void getMultiplesParams() {
+            ResponseEntity<String> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idProducto=1&idCuenta=1"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                String.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(400);
+        }
+
+        @Test @DisplayName("GET idProducto inexistente → 404")
+        void getIdNoExiste() {
+            ResponseEntity<String> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idProducto=999"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                String.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(404);
+        }
+
+        @Test @DisplayName("GET gtin inexistente → 404")
+        void getGtinNoExiste() {
+            ResponseEntity<String> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?gtin=XX"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                String.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(404);
+        }
+
+        @Test @DisplayName("GET idCuenta sin productos → []")
+        void getPorCuentaVacia() {
+            // Creamos una categoría para la cuenta
+            Categoria c = new Categoria();
+            c.setNombre("C1");
+            c.setCuentaId(1);
+            categoriaRepo.save(c);
+
+            ResponseEntity<Set<ProductoDTO>> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idCuenta=1"))
+                    .header(AUTH_HEADER, BEARER).build(),
                 new org.springframework.core.ParameterizedTypeReference<Set<ProductoDTO>>() {});
-            
-
-            assertThat(response.getStatusCode()).isEqualTo(200);
-            assertThat(response.getBody()).isEmpty();
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(resp.getBody()).isEmpty();
         }
 
-        @Test
-        @DisplayName("POST /producto sin categorías devuelve 500")
-        public void crearSinCategorias() {
-            ProductoEntradaDTO dto = new ProductoEntradaDTO();
-            dto.setGtin("0000000000000");
-            dto.setSku("SKU0");
-            dto.setNombre("SinCat");
-            dto.setTextoCorto("Desc");
-            dto.setMiniatura("url");
-            dto.setCategorias(Collections.emptySet());
-
-            URI endpoint = uri("/producto?idCuenta=1");
-            RequestEntity<ProductoEntradaDTO> request = RequestEntity.post(endpoint)
-                .header("Authorization", VALID_TOKEN)
-                .contentType(MediaType.APPLICATION_JSON)
-                .body(dto);
-
-            ResponseEntity<String> response = restTemplate.exchange(request, String.class);
-            assertThat(response.getStatusCodeValue()).isEqualTo(500);
+        @Test @DisplayName("GET idCategoria inexistente → 404")
+        void getCategoriaNoExiste() {
+            ResponseEntity<String> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idCategoria=50"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                String.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(404);
         }
     }
 
-    @Nested
-    @DisplayName("Controlador /producto con productos existentes")
-    class ControladorConDatos {
-        private Integer catId;
-        private Integer prodId;
+    @Nested @DisplayName("Con productos existentes")
+    class ConProductos {
+
+        private Categoria cat;
+        private Producto prod;
 
         @BeforeEach
-        public void initDatos() {
-            Categoria cat = new Categoria();
-            cat.setId(1);
-            cat.setNombre("Cat1");
-            categoriaRepository.save(cat);
-            catId = cat.getId();
+        void datos() {
+            cat = new Categoria();
+            cat.setNombre("CatX");
+            cat.setCuentaId(2);
+            categoriaRepo.save(cat);
 
-            Producto prod = new Producto();
-            prod.setGtin("1111111111111");
-            prod.setSku("SKU1");
-            prod.setNombre("Prod1");
-            prod.setTextoCorto("Desc1");
-            prod.setMiniatura("url1");
-            prod.setCuentaId(1);
+            prod = new Producto();
+            prod.setGtin("GTIN-123");
+            prod.setCuentaId(2);
+            prod.setNombre("ProdA");
             prod.getCategorias().add(cat);
-            productoRepository.save(prod);
-            prodId = prod.getId();
+            productoRepo.save(prod);
         }
 
-        @Test
-        @DisplayName("GET /producto?idCuenta=1 devuelve lista con 1")
-        public void listaConUno() {
-            URI endpoint = uri("/producto?idCuenta=1");
-            RequestEntity<Void> request = RequestEntity.get(endpoint)
-                .header("Authorization", VALID_TOKEN)
-                .accept(MediaType.APPLICATION_JSON)
-                .build();
+        @Test @DisplayName("GET por idProducto → OK + DTO correcto")
+        void getPorId() {
+            ResponseEntity<ProductoDTO> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idProducto=5"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                ProductoDTO.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(resp.getBody().getNombre()).isEqualTo("ProdA");
+        }
 
-            ResponseEntity<Set<ProductoDTO>> response = restTemplate.exchange(request,
+        @Test @DisplayName("GET por gtin → OK + DTO correcto")
+        void getPorGtin() {
+            ResponseEntity<ProductoDTO> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?gtin=GTIN-123"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                ProductoDTO.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(resp.getBody().getId()).isEqualTo(5);
+        }
+
+        @Test @DisplayName("GET por idCuenta → lista con 1 elemento")
+        void getPorCuenta() {
+            ResponseEntity<Set<ProductoDTO>> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idCuenta=2"))
+                    .header(AUTH_HEADER, BEARER).build(),
                 new org.springframework.core.ParameterizedTypeReference<Set<ProductoDTO>>() {});
-
-            assertThat(response.getStatusCodeValue()).isEqualTo(200);
-            assertThat(response.getBody()).hasSize(1);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(resp.getBody()).hasSize(1);
         }
 
-        @Test
-        @DisplayName("GET /producto/{id} devuelve 404 para id inválido")
-        public void getNoExistente() {
-            URI endpoint = uri("/producto/999");
-            RequestEntity<Void> request = RequestEntity.get(endpoint)
-                .header("Authorization", VALID_TOKEN)
-                .build();
-
-            ResponseEntity<String> response = restTemplate.exchange(request, String.class);
-            assertThat(response.getStatusCodeValue()).isEqualTo(404);
+        @Test @DisplayName("GET por idCategoria → lista con 1 elemento")
+        void getPorCategoria() {
+            ResponseEntity<Set<ProductoDTO>> resp = restTemplate.exchange(
+                RequestEntity.get(endpoint("/producto?idCategoria=100"))
+                    .header(AUTH_HEADER, BEARER).build(),
+                new org.springframework.core.ParameterizedTypeReference<Set<ProductoDTO>>() {});
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(resp.getBody()).hasSize(1);
         }
 
-        @Test
-        @DisplayName("GET /producto/{id} devuelve el producto existente")
-        public void getExistente() {
-            URI endpoint = uri("/producto/" + prodId);
-            RequestEntity<Void> request = RequestEntity.get(endpoint)
-                .header("Authorization", VALID_TOKEN)
-                .accept(MediaType.APPLICATION_JSON)
-                .build();
+        @Test @DisplayName("POST crearProducto → 201 + Location + DTO")
+        void crearProducto() {
+            ProductoEntradaDTO entrada = new ProductoEntradaDTO();
+            entrada.setGtin("NEW-GTIN");
+            entrada.setSku("SKU1");
+            entrada.setNombre("NuevoProd");
+            entrada.setTextoCorto("T1");
+            entrada.setMiniatura("img.png");
+            CategoriaDTO catDto = new CategoriaDTO();
+            catDto.setNombre("CatX");
+            entrada.setCategorias(Collections.singleton(catDto));
 
-            ResponseEntity<ProductoDTO> response = restTemplate.exchange(request, ProductoDTO.class);
-            assertThat(response.getStatusCodeValue()).isEqualTo(200);
-            assertThat(response.getBody().getSku()).isEqualTo("SKU1");
+            entrada.setAtributos(Collections.emptySet());
+
+            ResponseEntity<ProductoDTO> resp = restTemplate.exchange(
+                RequestEntity.post(endpoint("/producto?idCuenta=2"))
+                    .header(AUTH_HEADER, BEARER)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .body(entrada),
+                ProductoDTO.class);
+
+            assertThat(resp.getStatusCodeValue()).isEqualTo(201);
+            assertThat(resp.getHeaders().getLocation()).isNotNull();
+            assertThat(resp.getBody().getNombre()).isEqualTo("NuevoProd");
         }
 
-        @Test
-        @DisplayName("PUT /producto/{id} actualiza el nombre")
-        public void actualizar() {
-            ProductoEntradaDTO dto = new ProductoEntradaDTO();
-            dto.setGtin("1111111111111");
-            dto.setSku("SKU1");
-            dto.setNombre("Modificado");
-            dto.setTextoCorto("Desc1");
-            dto.setMiniatura("url1");
-            CategoriaDTO catDTO = CategoriaMapper.toDTO(categoriaRepository.findById(catId).get());
-            dto.setCategorias(Set.of(catDTO));
+        @Test @DisplayName("PUT actualizarProducto → 200 + cambios aplicados")
+        void actualizarProducto() {
+            ProductoEntradaDTO entrada = new ProductoEntradaDTO();
+            entrada.setGtin("GTIN-123");
+            entrada.setSku("SKU2");
+            entrada.setNombre("ProdA-Edit");
+            entrada.setTextoCorto("TE");
+            entrada.setMiniatura("img2.png");
+            CategoriaDTO catDto = new CategoriaDTO();
+            catDto.setNombre("CatX");
+            entrada.setCategorias(Collections.singleton(catDto));
 
-            URI endpoint = uri("/producto/" + prodId);
-            RequestEntity<ProductoEntradaDTO> request = RequestEntity.put(endpoint)
-                .header("Authorization", VALID_TOKEN)
-                .contentType(MediaType.APPLICATION_JSON)
-                .body(dto);
+            entrada.setAtributos(Collections.emptySet());
 
-            ResponseEntity<ProductoDTO> response = restTemplate.exchange(request, ProductoDTO.class);
-            assertThat(response.getStatusCodeValue()).isEqualTo(200);
-            assertThat(response.getBody().getNombre()).isEqualTo("Modificado");
+            ResponseEntity<ProductoDTO> resp = restTemplate.exchange(
+                RequestEntity.put(endpoint("/producto/" + prod.getId()))
+                    .header(AUTH_HEADER, BEARER)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .body(entrada),
+                ProductoDTO.class);
+
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(resp.getBody().getNombre()).isEqualTo("ProdA-Edit");
         }
 
-        @Test
-        @DisplayName("DELETE /producto/{id} elimina correctamente")
-        public void eliminar() {
-            URI endpoint = uri("/producto/" + prodId);
-            RequestEntity<Void> request = new RequestEntity<>(null, null, HttpMethod.DELETE, endpoint);
-            ResponseEntity<Void> response = restTemplate.exchange(request, Void.class);
-            assertThat(response.getStatusCodeValue()).isEqualTo(200);
-            assertThat(productoRepository.findById(prodId)).isEmpty();
-        }
-    }
-
-    @Nested
-    @DisplayName("Servicio Producto")
-    class ServicioSinMocks {
-        @Autowired
-        private uma.informatica.sii.gestor_productos.microservice_gestor_productos.servicios.ProductoService productoService;
-
-        @Test
-        @DisplayName("getProductoPorId lanza EntidadNoExistente para id inválido")
-        public void servicioGetNoExistente() {
-            assertThrows(EntidadNoExistente.class, () -> productoService.getProductoPorId(999, "Bearer valid-user-token"));
-        }
-
-        @Test
-        @DisplayName("eliminarProducto lanza EntidadNoExistente para id inválido")
-        public void servicioDeleteNoExistente() {
-            assertThrows(EntidadNoExistente.class, () -> productoService.eliminarProducto(999, "Bearer valid-user-token"));
+        @Test @DisplayName("DELETE eliminarProducto → 200 + sin entidad en BD")
+        void eliminarProducto() {
+            ResponseEntity<Void> resp = restTemplate.exchange(
+                RequestEntity.delete(endpoint("/producto/" + prod.getId()))
+                    .header(AUTH_HEADER, BEARER)
+                    .build(),
+                Void.class);
+            assertThat(resp.getStatusCodeValue()).isEqualTo(200);
+            assertThat(productoRepo.findById(5)).isEmpty();
         }
     }
 }
